fix: 消除 Thread.getId() 过时 API 告警,改用 Thread.threadId()
JDK 21 起 Thread.getId() 被标记过时(建议 Thread.threadId(),Java 19+)。
全局替换 Thread.currentThread().getId() 及 Thread 实例 .getId() 共 10 处,
涉及 core/web/test-automation 模块;其余领域对象 getId() 不动。